@@ -41,6 +41,8 @@ void edi_filepanel_add(Evas_Object *parent, Evas_Object *win,
 
 const char *edi_filepanel_selected_path_get(Evas_Object *obj);
 
+void edi_filepanel_search();
+
 /**
  * @}
  */
