@@ -1,3 +1,7 @@
+2016-02-11 ajwillia.ms (Andy Williams)
+
+	* Add a filename filter to the filepanel
+
 2015-11-19 ajwillia.ms (Andy Williams)
 
 	* Update for the efo 1.16 release
